--- a/index.html
+++ b/index.html
@@ -28,8 +28,15 @@
         </ul>
       </nav>
       <ul class="contacts">
-        <li><a class="out-nav-list mail" href="mailto">info@devstudio.com </a></li>
-        <li><a class="out-nav-list" href="tel">+38 096 111 11 11 </a></li>
+        <li>
+          <a class="out-nav-list mail" href="mailto"> 
+          
+            info@devstudio.com 
+          </a>
+        </li>
+        <li><a class="out-nav-list" href="tel">
+    
+          +38 096 111 11 11 </a></li>
       </ul>
       </div>
     </header>
@@ -49,6 +56,11 @@
         <h2 class="hidden-title">Наши приоритеты</h2>
         <ul class="product-list">
           <li>
+            <div>
+              <svg>
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg>
+            </div>
             <h3 class="third-title text-title">Внимание к деталям</h3>
             <p class="about-product-p">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
@@ -135,6 +147,58 @@
         </ul>
       </div>
       </section>
+
+<!-- Clients section-->
+
+<section class="section"> 
+  <div class="conteiner">
+<h2 class="second-title"> Постоянные клиенты </h2>
+<ul class="clients-list">
+  <li class="clients-company">
+  <a href="Client1"> 
+  <svg class="clients-logo" width="106" heigh="60" > 
+    <use href="./images/icons.svg#icon-Logo1"></use>
+  </svg>
+  </a>
+  </li>
+  <li class="clients-company">
+    <a href="Client1"> 
+      <svg class="clients-logo"> 
+        <use href="./images/icons.svg#icon-Logo2"></use>
+      </svg>
+      </a>
+  </li>
+  <li class="clients-company">
+    <a href="Client1"> 
+      <svg class="clients-logo"> 
+        <use href="./images/icons.svg#icon-Logo3"></use>
+      </svg>
+      </a>
+  </li>
+  <li class="clients-company">
+    <a href="Client1"> 
+      <svg class="clients-logo"> 
+        <use href="./images/icons.svg#icon-Logo4"></use>
+      </svg>
+      </a>
+  </li>
+  <li class="clients-company">
+    <a href="Client1"> 
+      <svg class="clients-logo"> 
+        <use href="./images/icons.svg#icon-Logo5"></use>
+      </svg>
+      </a>
+  </li>
+  <li class="clients-company">
+    <a href="Client1"> 
+      <svg class="clients-logo"> 
+        <use href="./images/icons.svg#icon-Logo6"></use>
+      </svg>
+      </a>
+  </li>
+</ul>
+  </div>
+</section>
     </main>
 
     <!--footer conteiner-->
