--- a/index.html
+++ b/index.html
@@ -30,12 +30,16 @@
       <ul class="contacts">
         <li>
           <a class="out-nav-list mail" href="mailto"> 
-          
-            info@devstudio.com 
+            <svg class="out-nav-icon" width="16" height="12">
+              <use href="./images/icons.svg#icon-envelope"></use>
+            </svg>
+          info@devstudio.com 
           </a>
         </li>
         <li><a class="out-nav-list" href="tel">
-    
+          <svg class="out-nav-icon" width="10" height="16">
+            <use href="./images/icons.svg#icon-smartphone"></use>
+          </svg>
           +38 096 111 11 11 </a></li>
       </ul>
       </div>
@@ -56,8 +60,8 @@
         <h2 class="hidden-title">Наши приоритеты</h2>
         <ul class="product-list">
           <li>
-            <div>
-              <svg>
+            <div class="square-product-icon">
+              <svg class="product-icon" width="65.32" heigh="70">
                 <use href="./images/icons.svg#icon-antenna"></use>
               </svg>
             </div>
@@ -66,6 +70,11 @@
           </li>
 
           <li>
+            <div class="square-product-icon">
+              <svg class="product-icon" width="66.96" heigh="70">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
+            </div>
             <h3 class="third-title text-title">Пунктуальность</h3>
             <p class="about-product-p">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
@@ -73,6 +82,11 @@
           </li>
 
           <li>
+            <div class="square-product-icon">
+              <svg class="product-icon" width="70" heigh="53.69">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
+            </div>
             <h3 class="third-title text-title">Планирование</h3>
             <p class="about-product-p">
               Равным образом консультация с широким активом в значительной степени обуславливает.
@@ -80,6 +94,11 @@
           </li>
 
           <li>
+            <div class="square-product-icon">
+              <svg class="product-icon" width="54.83" heigh="60.66">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
+            </div>
             <h3 class="third-title text-title">Современные технологии</h3>
             <p class="about-product-p">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
@@ -116,6 +135,36 @@
             <div class="member-card">
             <h3 class="member-title">Игорь Демьяненко</h3>
             <p class="our-team-p">Product Designer</p>
+          <ul class="social-network-list">
+            <li class="social-network-link">
+              <a class="social-network" href="">
+                <svg class="icon-social" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-network-link">
+              <a class="social-network" href="">
+                <svg class="icon-social" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-network-link">
+              <a class="social-network" href="">
+                <svg class="icon-social" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-network-link">
+              <a class="social-network" href="">
+                <svg class="icon-social" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
           </div>
           </li>
           <li class="members">
@@ -128,6 +177,36 @@
             <div class="member-card">
             <h3 class="member-title">Ольга Репина</h3>
             <p class="our-team-p">Frontend Developer</p>
+            <ul class="social-network-list">
+              <li class="social-network-link">
+                <a class="social-network" href="">
+                  <svg class="icon-social" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-network-link">
+                <a class="social-network" href="">
+                  <svg class="icon-social" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-network-link">
+                <a class="social-network" href="">
+                  <svg class="icon-social" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-network-link">
+                <a class="social-network" href="">
+                  <svg class="icon-social" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
             </div>
           </li>
           <li class="members">
@@ -135,6 +214,36 @@
             <div class="member-card">
             <h3 class="member-title">Николай Тарасов</h3>
             <p class="our-team-p">Marketing</p>
+            <ul class="social-network-list">
+              <li class="social-network-link">
+                <a class="social-network" href="">
+                  <svg class="icon-social" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-network-link">
+                <a class="social-network" href="">
+                  <svg class="icon-social" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-network-link">
+                <a class="social-network" href="">
+                  <svg class="icon-social" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-network-link">
+                <a class="social-network" href="">
+                  <svg class="icon-social" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
             </div>
           </li>
           <li class="members">
@@ -142,6 +251,36 @@
             <div class="member-card">
             <h3 class="member-title">Михаил Ермаков</h3>
             <p class="our-team-p">UI Designer</p>
+            <ul class="social-network-list">
+              <li class="social-network-link">
+                <a class="social-network" href="">
+                  <svg class="icon-social" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-network-link">
+                <a class="social-network" href="">
+                  <svg class="icon-social" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-network-link">
+                <a class="social-network" href="">
+                  <svg class="icon-social" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-network-link">
+                <a class="social-network" href="">
+                  <svg class="icon-social" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
             </div>
           </li>
         </ul>
@@ -155,43 +294,43 @@
 <h2 class="second-title"> Постоянные клиенты </h2>
 <ul class="clients-list">
   <li class="clients-company">
-  <a href="Client1"> 
-  <svg class="clients-logo" width="106" heigh="60" > 
+  <a class="company-item"  href="Client1" class="clients-link"> 
+  <svg class="clients-logo" width="106" heigh="60"> 
     <use href="./images/icons.svg#icon-Logo1"></use>
   </svg>
   </a>
   </li>
   <li class="clients-company">
-    <a href="Client1"> 
-      <svg class="clients-logo"> 
+    <a class="company-item"  href="Client1"> 
+      <svg class="clients-logo" width="106" heigh="60"> 
         <use href="./images/icons.svg#icon-Logo2"></use>
       </svg>
       </a>
   </li>
   <li class="clients-company">
-    <a href="Client1"> 
-      <svg class="clients-logo"> 
+    <a class="company-item" href="Client1"> 
+      <svg class="clients-logo" width="106" heigh="60"> 
         <use href="./images/icons.svg#icon-Logo3"></use>
       </svg>
       </a>
   </li>
   <li class="clients-company">
-    <a href="Client1"> 
-      <svg class="clients-logo"> 
+    <a class="company-item" href="Client1"> 
+      <svg class="clients-logo" width="106" heigh="60"> 
         <use href="./images/icons.svg#icon-Logo4"></use>
       </svg>
       </a>
   </li>
   <li class="clients-company">
-    <a href="Client1"> 
-      <svg class="clients-logo"> 
+    <a class="company-item"  href="Client1"> 
+      <svg class="clients-logo" width="106" heigh="60"> 
         <use href="./images/icons.svg#icon-Logo5"></use>
       </svg>
       </a>
   </li>
   <li class="clients-company">
-    <a href="Client1"> 
-      <svg class="clients-logo"> 
+    <a class="company-item" href="Client1"> 
+      <svg class="clients-logo" width="106" heigh="60"> 
         <use href="./images/icons.svg#icon-Logo6"></use>
       </svg>
       </a>
@@ -204,6 +343,8 @@
     <!--footer conteiner-->
     <footer  class="footer-conteiner">
       <div class="container">
+       <div class="footer-block">
+        <div class="adress-block">
       <a class="logof" href="./index.html" target="_blank" rel="noopener noreferrer"> Web <span class="logo-studio-second-footer">Studio</span> </a>
       <address>
         <ul class="adress-list">
@@ -214,9 +355,43 @@
           </li>
           <li><a class="contact-conteiner address-link" class="link" href="mailto:info@devstudio.com">info@example.com</a></li>
           <li><a class="contact-conteiner address-link" href="tel:+380961111111"> +38 096 111 11 11 </a></li>
-        </ul class="list">
+        </ul>
+      </li>
       </address>
     </div>
+      <div class="social-footer">
+           <p class="social-p">присоединяйтесь</p>
+           <ul class="social-list">
+          <li class="social-item"> 
+            <a class="social-link" href="instagram.com">
+             <svg class="social-icon" width="20" height="20"> 
+            <use href="./images/icons.svg#icon-instagram"></use>
+          </svg>
+        </a>
+        </li>
+          <li class="social-item">
+            <a class="social-link" href="twitter.com">
+            <svg class="social-icon"  width="20" height="20"> 
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+          </a>
+          </li>
+          <li class="social-item">
+            <a class="social-link" href="facebook.com">
+            <svg class="social-icon" width="20" height="20"> 
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+          </li>
+          <li class="social-item">
+            <a class="social-link" href="linkedin.com">
+            <svg class="social-icon"  width="20" height="20"> 
+              <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+          </li>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
