--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,16 @@
         </ul>
       </nav>
       <ul class="contacts">
-        <li><a class="out-nav-list mail" href="mailto">info@devstudio.com </a></li>
-        <li><a class="out-nav-list" href="tel">+38 096 111 11 11 </a></li>
+        <li><a class="out-nav-list mail" href="mailto">
+          <svg class="out-nav-icon" width="16" height="12">
+            <use href="./images/icons.svg#icon-envelope"></use>
+          </svg>
+          info@devstudio.com </a></li>
+        <li><a class="out-nav-list" href="tel">
+          <svg class="out-nav-icon" width="10" height="16">
+            <use href="./images/icons.svg#icon-smartphone"></use>
+          </svg>
+          +38 096 111 11 11 </a></li>
       </ul>
       </div>
     </header>
@@ -133,6 +141,8 @@
    <!--footer conteiner-->
    <footer  class="footer-conteiner">
     <div class="container">
+     <div class="footer-block">
+      <div class="adress-block">
     <a class="logof" href="./index.html" target="_blank" rel="noopener noreferrer"> Web <span class="logo-studio-second-footer">Studio</span> </a>
     <address>
       <ul class="adress-list">
@@ -144,7 +154,41 @@
         <li><a class="contact-conteiner address-link" class="link" href="mailto:info@devstudio.com">info@example.com</a></li>
         <li><a class="contact-conteiner address-link" href="tel:+380961111111"> +38 096 111 11 11 </a></li>
       </ul>
+    </li>
     </address>
   </div>
+    <div class="social-footer">
+         <p class="social-p">присоединяйтесь</p>
+         <ul class="social-list">
+        <li class="social-item"> 
+          <a class="social-link" href="instagram.com">
+           <svg class="social-icon" width="20" height="20"> 
+          <use href="./images/icons.svg#icon-instagram"></use>
+        </svg>
+      </a>
+      </li>
+        <li class="social-item">
+          <a class="social-link" href="twitter.com">
+          <svg class="social-icon"  width="20" height="20"> 
+            <use href="./images/icons.svg#icon-twitter"></use>
+          </svg>
+        </a>
+        </li>
+        <li class="social-item">
+          <a class="social-link" href="facebook.com">
+          <svg class="social-icon" width="20" height="20"> 
+            <use href="./images/icons.svg#icon-facebook"></use>
+          </svg>
+        </a>
+        </li>
+        <li class="social-item">
+          <a class="social-link" href="linkedin.com">
+          <svg class="social-icon"  width="20" height="20"> 
+            <use href="./images/icons.svg#icon-linkedin"></use>
+          </svg>
+        </a>
+        </li>
+      </div>
+    </div>
   </footer>
   </body>
