--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <!--main conteiner-->
     <main>
-      <section class="hero-title-button section">
+      <section class="hero-title-button">
         <div class="container title-container">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button class="button-hero" type="button">Заказать услугу</button>
@@ -61,7 +61,7 @@
         <ul class="product-list">
           <li>
             <div class="square-product-icon">
-              <svg class="product-icon" width="65.32" heigh="70">
+              <svg class="product-icon" width="65" height="70">
                 <use href="./images/icons.svg#icon-antenna"></use>
               </svg>
             </div>
@@ -71,7 +71,7 @@
 
           <li>
             <div class="square-product-icon">
-              <svg class="product-icon" width="66.96" heigh="70">
+              <svg class="product-icon" width="67" height="70">
                 <use href="./images/icons.svg#icon-clock"></use>
               </svg>
             </div>
@@ -83,7 +83,7 @@
 
           <li>
             <div class="square-product-icon">
-              <svg class="product-icon" width="70" heigh="53.69">
+              <svg class="product-icon" width="70" height="54">
                 <use href="./images/icons.svg#icon-diagram"></use>
               </svg>
             </div>
@@ -95,7 +95,7 @@
 
           <li>
             <div class="square-product-icon">
-              <svg class="product-icon" width="54.83" heigh="60.66">
+              <svg class="product-icon" width="55" height="61">
                 <use href="./images/icons.svg#icon-astronaut"></use>
               </svg>
             </div>
@@ -294,43 +294,43 @@
 <h2 class="second-title"> Постоянные клиенты </h2>
 <ul class="clients-list">
   <li class="clients-company">
-  <a class="company-item"  href="Client1" class="clients-link"> 
-  <svg class="clients-logo" width="106" heigh="60"> 
+  <a class="company-item"  href="Client1"> 
+  <svg class="clients-logo" width="106" height="60"> 
     <use href="./images/icons.svg#icon-Logo1"></use>
   </svg>
   </a>
   </li>
   <li class="clients-company">
     <a class="company-item"  href="Client1"> 
-      <svg class="clients-logo" width="106" heigh="60"> 
+      <svg class="clients-logo" width="106" height="60"> 
         <use href="./images/icons.svg#icon-Logo2"></use>
       </svg>
       </a>
   </li>
   <li class="clients-company">
     <a class="company-item" href="Client1"> 
-      <svg class="clients-logo" width="106" heigh="60"> 
+      <svg class="clients-logo" width="106" height="60"> 
         <use href="./images/icons.svg#icon-Logo3"></use>
       </svg>
       </a>
   </li>
   <li class="clients-company">
     <a class="company-item" href="Client1"> 
-      <svg class="clients-logo" width="106" heigh="60"> 
+      <svg class="clients-logo" width="106" height="60"> 
         <use href="./images/icons.svg#icon-Logo4"></use>
       </svg>
       </a>
   </li>
   <li class="clients-company">
     <a class="company-item"  href="Client1"> 
-      <svg class="clients-logo" width="106" heigh="60"> 
+      <svg class="clients-logo" width="106" height="60"> 
         <use href="./images/icons.svg#icon-Logo5"></use>
       </svg>
       </a>
   </li>
   <li class="clients-company">
     <a class="company-item" href="Client1"> 
-      <svg class="clients-logo" width="106" heigh="60"> 
+      <svg class="clients-logo" width="106" height="60"> 
         <use href="./images/icons.svg#icon-Logo6"></use>
       </svg>
       </a>
@@ -353,10 +353,9 @@
               г. Киев, пр-т Леси Украинки, 26
             </a>
           </li>
-          <li><a class="contact-conteiner address-link" class="link" href="mailto:info@devstudio.com">info@example.com</a></li>
+          <li><a class="contact-conteiner address-link" href="mailto:info@devstudio.com">info@example.com</a></li>
           <li><a class="contact-conteiner address-link" href="tel:+380961111111"> +38 096 111 11 11 </a></li>
         </ul>
-      </li>
       </address>
     </div>
       <div class="social-footer">
@@ -390,7 +389,9 @@
             </svg>
           </a>
           </li>
+           </ul>
         </div>
+      </div>
       </div>
     </footer>
   </body>
