--- a/portfolio.html
+++ b/portfolio.html
@@ -132,7 +132,7 @@
         <p class="photoes-p">Приложение</p>
       </div>
         </a>
-    </li class="portfolio-card">
+    </li>
           </ul>
         </div>
       </section>
@@ -151,10 +151,9 @@
             г. Киев, пр-т Леси Украинки, 26
           </a>
         </li>
-        <li><a class="contact-conteiner address-link" class="link" href="mailto:info@devstudio.com">info@example.com</a></li>
+        <li><a class="contact-conteiner address-link" href="mailto:info@devstudio.com">info@example.com</a></li>
         <li><a class="contact-conteiner address-link" href="tel:+380961111111"> +38 096 111 11 11 </a></li>
       </ul>
-    </li>
     </address>
   </div>
     <div class="social-footer">
@@ -188,7 +187,9 @@
           </svg>
         </a>
         </li>
+         </ul>
       </div>
+    </div>
     </div>
   </footer>
   </body>
